deny_ingress_frontend.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
decription: "Deny all local service to talk directly to frontend"
metadata: 
  name: "deny-all-ingress-to-frontend"
spec:
  endpointSelector:
    matchLabels:
      app: frontend
      app: frontend-external
    ingress:
    - {}
